[indexTable - dataTable] fix alignement for tags, status and avatars

--- a/packages/scss/src/components/dataTable/component.scss
+++ b/packages/scss/src/components/dataTable/component.scss
@@ -126,7 +126,15 @@
 	.statusBadge,
 	.tag,
 	.avatar {
-		display: flex;
-		inline-size: fit-content;
+		vertical-align: top;
+	}
+
+	.statusBadge,
+	.tag {
+		margin-top: var(--pr-t-spacings-25);
+	}
+
+	.avatarWrapper {
+		display: inline-flex;
 	}
 }
